# key-value-storage

./: CMakeLists.txt  README.md  key_value_storage.h
src/: key_value_storage.h  library.cpp  library.h  main.cpp  utilities.cpp  utilities.h
src/io/: FileArray.cpp  FileArray.h  IOBaseClass.h  IOStorage.cpp  IOStorage.h  Journal.cpp  Journal.h
src/node/: BaseNodeClass.h  InnerNode.h  LeafNode.h  Node.h
src/tree/: BTree.h  BaseBTreeClass.h
tests/: test-key-value-storage.h  test_all.cpp  test_btree.h  test_file_array.h  test_inner.h  test_io_storage.h  test_key_value_storage.h  test_leaf.h
tests/test_files/: storage  table
